2000-09-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gen_util/mailcheck.c (mail_check_timeout): improve text-only mail
	notification to show unread messages with all types except local
	mailspools.
	(check_mail_file_status): compute total mail count wiht all modes
	except local mailspools.
	* gen_util/popcheck.c (imap_check): improve IMAP checking.

Sun Sep 03 06:19:27 2000  George Lebl <jirka@5z.com>

	* gen_util/clock.c, gen_util/printer.c:  Fix warnings, mark the
	  gnome_config_get argument for hourformat for translation, do
	  some sanity checking and use 12 and 24 instead of 0 and 1.

Fri Jun 09 23:22:29 2000  George Lebl <jirka@5z.com>

	* gen_util/mailcheck.c: null everything on destroy, use 0 for invalid
	  handler tags, always zero out tags right after removing the
	  timeout, remove the animation timeout on destroy which fixes all
	  those fucked up crashes on remove of mailcheck or later since it
	  can happen a couple of mintues after.  Now if only bug.gnome.org
	  worked and I could kill them all ...

2000-05-17  Jacob Berkman  <jacob@helixcode.com>

	* gen_util/mailcheck.c (create_mail_widgets): s/free/g_free/
	(applet_change_pixel_size): clean up stuff a little, and g_free
	a string
	(make_mailcheck_applet): make the "little hack" not leak memory,
	and give the code a little love, which it needed very much

2000-05-14  Karl Eichwalder  <ke@suse.de>

	* gen_util/mailcheck.soundlist (description): Add de.

2000-04-30 Dan Mueth <d-mueth@uchicago.edu>

	* gen_util/help/C/*: Fixed broken PNG images which Netscape
	can't render.  Fixed "inluding" and "Cancel" typos. Changed
	DTD to 1.1.

Sat Apr 29 19:35:19 2000  George Lebl <jirka@5z.com>

	* gen_util/mailcheck.c: fix scaling to different panel sizes.

2000-04-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gen_util/email-tiny.png: added a new animation for tiny
	panel (by Ian Campbell <ijc25@cam.ac.uk>).
	* gen_util/Makefile.am: install email-tiny.png

2000-04-25  Martin Baulig  <baulig@suse.de>
