@@ -151,9 +151,9 @@
      <command>date</command> command. For example, to set the time to
      11:43:01PM and the date to April 4, use <command>date --set="Apr
      4 23:43:01"</command>. Note that you must be logged in as root to
-     set the time. To learn more about the <command>date</command> command,
-     type <command>man date</command> at a terminal prompt. You may
-     set your timezone using the <command>timeconfig</command> or
+     set the time. More information about the <command>date</command> command is
+     available from the <ulink type="man" url="man:date">date manual page</ulink>.
+     You may set your timezone using the <command>timeconfig</command> or
      <command>tzselect</command> commands on some Linux
      distributions.
     </para>
@@ -184,7 +184,7 @@
     (<email>quartic@gimp.org</email>), and Stuart Parmenter
     (<email>pavlov@innerx.net</email>).  Please send all comments,
     suggestions, and bug 
-    reports to the <ulink url="http://bugs.gnome.org" type="http">GNOME
+    reports to the <ulink url="http://bugs.gnome.org/" type="http">GNOME
     bug tracking database</ulink>. (Instructions for submitting bug
     reports can be found <ulink
     url="http://bugs.gnome.org/Reporting.html" type="http">
@@ -199,10 +199,10 @@
     This manual was written by Dan Mueth
     (<email>d-mueth@uchicago.edu</email>). Please send all comments and
     suggestions regarding this manual to the <ulink type="http"
-    url="http://www.gnome.org/gdp">GNOME Documentation Project</ulink> 
+    url="http://developer.gnome.org/projects/gdp/">GNOME Documentation Project</ulink> 
     by sending an email to <email>docs@gnome.org</email>. You can also
     submit comments online by using the <ulink type="http"
-    url="http://www.gnome.org/gdp/doctable/">GNOME Documentation Status
+    url="http://developer.gnome.org/projects/gdp/doctable/">GNOME Documentation Status
     Table</ulink>.
    </para>
 
@@ -225,8 +225,8 @@
    <title>License</title>
    <para>
     This program is free software; you can redistribute it and/or
-    modify it under the terms of the <citetitle>GNU General Public
-    License</citetitle> as published by the Free Software Foundation;
+    modify it under the terms of the <ulink type="help" url="gnome-help:gpl"><citetitle>GNU General Public
+    License</citetitle></ulink> as published by the Free Software Foundation;
     either version 2 of the License, or (at your option) any later
     version.
    </para>
@@ -234,13 +234,12 @@
     This program is distributed in the hope that it will be useful, but
     WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    <citetitle>GNU General Public License</citetitle> for more details.
+    <ulink type="help" url="gnome-help:gpl"><citetitle>GNU General Public License</citetitle></ulink> for more details.
    </para>
    <para>
-    A copy of the <citetitle>GNU General Public License</citetitle> is
-    included as an appendix to the <citetitle>GNOME Users
-    Guide</citetitle>.  You may also obtain a copy of the
-    <citetitle>GNU General Public License</citetitle> from the Free
+    A copy of the <ulink type="help" url="gnome-help:gpl"><citetitle>GNU General Public License</citetitle></ulink> is
+    included with the GNOME documentation.  You may also obtain a copy of the
+    <ulink type="help" url="gnome-help:gpl"><citetitle>GNU General Public License</citetitle></ulink> from the Free
     Software Foundation by visiting <ulink type="http"
     url="http://www.fsf.org">their Web site</ulink> or by writing to
     <address>
