@@ -1,5 +1,5 @@
-<!DOCTYPE Article PUBLIC "-//GNOME//DTD DocBook PNG Variant V1.1//EN"[
- <!entity clock.sgml SYSTEM "clock.sgml">
+<!DOCTYPE article PUBLIC "-//GNOME//DTD DocBook PNG Variant V1.1//EN"[
+ <!ENTITY clock.sgml SYSTEM "clock.sgml">
 
 ]>
 
@@ -26,11 +26,12 @@
   <!-- do not put authorname in the header except in copyright - use
   section "authors" below -->
 
-  <legalnotice>
+  <legalnotice id="legalnotice">
    <para>
     Permission is granted to copy, distribute and/or modify this
-    document under the terms of the <citetitle>GNU Free Documentation
-    License</citetitle>, Version 1.1 or any later version published
+    document under the terms of the <ulink type="help" url="gnome-help:fdl">
+    <citetitle>GNU Free Documentation
+    License</citetitle></ulink>, Version 1.1 or any later version published
     by the Free Software Foundation with no Invariant Sections, no
     Front-Cover Texts, and no Back-Cover Texts. You may obtain a copy
     of the <citetitle>GNU Free Documentation License</citetitle> from
