@@ -1,3 +1,8 @@
+2000-10-10 John Fleck <jfleck@inkstain.net>
+
+	* gen_util/help/C/clock/clock-applet.sgml and clock.sgml
+	updating for Nautilus help browser (patch from Greg Leblanc)
+
 2000-09-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
 	* gen_util/mailcheck.c (mail_check_timeout): improve text-only mail
